--- a/css/styles.css
+++ b/css/styles.css
@@ -1619,7 +1619,7 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
 .machine-txt-container {
     grid-area: mach-main;
     display: grid;
-    place-items: center left;
+    place-items: center;
     width: 100%;
     height: 100%;
     padding: .5rem;
