--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,23 @@
 :root {
-    /* Colors */
+    /* Colors / BG */
     --background-body: hsl(0, 0%, 100%);
     --background-navbar: hsl(0, 0%, 100%);
-    --link-color-reg: hsl(0, 0%, 0%);
-    --link-color-start: hsl(0, 0%, 100%);
-    --link-color-vis: hsl(175, 66%, 37%);
-
-    --background-dropdown: hsl(0, 0%, 97%);
-    --background-dropdown-li: hsl(0, 0%, 90%);
-    --box-shadow-dropdown-li: hsla(221, 71%, 41%, 100%);
-
-    --landing-h1-color: hsl(0, 0%, 95%);
-    --landing-bg-color-one: hsl(246, 100%, 32%);
-    --landing-bg-color-two: hsla(246, 100%, 32%, 0.384);
-    --nav-button: black;
-    --nav-button-start: white;
     --background-main-section: white;
     --background-customers: hsl(0, 0%, 98%);
     --background-process-pitch-item: var(--color-1);
     --background-process-wrapper: hsl(0, 0%, 95%);
-
+    --background-footer: hsl(0, 0%, 97%);
+    --background-dropdown: hsl(0, 0%, 97%);
+    --background-dropdown-li: hsl(0, 0%, 90%);
     --background-machine-img: hsl(0, 0%, 89%);
+    --background-card-container: hsl(0, 0%, 98%);
 
-    --background-card-container: hsl(0, 0%, 100%);
-    --box-shadow-card-container: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+    --link-color-reg: hsl(0, 0%, 0%);
+    --link-color-start: hsl(0, 0%, 100%);
+    --landing-h1-color: hsl(0, 0%, 95%);
 
-    --box-shadow-process-dom: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+    --nav-button: black;
+    --nav-button-start: white;
 
     /* Color palette */  
     
@@ -41,12 +33,10 @@
     --color-light: ;
 
     --vatten: rgb(53, 120, 207);
-    --laser: rgb(240, 101, 83);
-    --plasma: rgb(223, 72, 243);
-    --gas: rgb(202, 126, 64);
 
     /* Gradients */
-    --main-section-hr-grad: linear-gradient(90deg, rgb(16, 93, 236), rgb(247, 184, 12));
+    --landing-bg-color-one: hsl(246, 100%, 32%);
+    --landing-bg-color-two: hsla(246, 100%, 32%, 0.384);
 
     /* Sizes */
     --html-font-size: 16px;
@@ -57,16 +47,16 @@
     --all-cb-one: all .3s cubic-bezier(0.17,0.31,0.13,1.3);
     --all-cb-two: all .5s cubic-bezier(.47,.42,.12,.98);
     --all-light-ease: all .1s ease-in-out;
-    
     --scrl-one-two: 1.2s ease-in-out;
     --scrl-zero-eight: .8s ease-in-out;
 
     /* Box-shadows */
     --navbar-boxshadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
     --cards-boxshadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    --box-shadow-card-container: rgba(0, 0, 0, 0.1) 0px 1px 10px;
+    --box-shadow-gallery-img: rgba(0, 0, 0, 0.1) 0 0 1px 1px;
+    --box-shadow-process-dom: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 
-    /* Force color filter */
-    --force-filter: invert(27%) sepia(10%) saturate(7442%) hue-rotate(183deg) brightness(96%) contrast(86%);
 }
 
 *, *::after, *::before {
@@ -129,7 +119,7 @@ ul {
     display: grid;
     grid-template-areas: ".. nav-mid ..";
     grid-template-columns: minmax(1rem, .7fr) 3fr minmax(1rem, .7fr);
-    background-color: hsla(0, 0%, 100%, 0);
+    background-color: rgba(0, 0, 0, 40%);
     transition: var(--all-ease);
 }
 
@@ -238,6 +228,7 @@ html:not([data-scroll='0']) .nav-button > span {
     font-weight: 500;
     color:var(--link-color-start);
     transition: var(--all-ft-ease);
+    cursor: pointer;
 }
 
 .navbar-items a:hover {
@@ -525,17 +516,10 @@ html:not([data-scroll='0']) .nav-button > span {
 .landing {
     position: relative;
     z-index: -1;
-    /* height: calc(100vmin - 5rem); */
     height: 100vmin;
     display: grid;
     grid-template-areas: '.. headerLeft headerRight ..';
     grid-template-columns: 2fr 3fr 1fr 2fr; 
-    /* background:linear-gradient(90deg, var(--landing-bg-color-one), var(--landing-bg-color-two)), url('https://upload.wikimedia.org/wikipedia/commons/2/2e/Plasmaschneiden-ueber-Wasseroberflaeche.JPG'); */
-    background:linear-gradient(90deg, var(--landing-bg-color-one), var(--landing-bg-color-two)), url('../img/landing_img.jpg');
-    background-blend-mode: darken;
-    background-position: 20% 0%;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .two-six-five {
@@ -694,7 +678,7 @@ html:not([data-scroll='0']) .nav-button > span {
     grid-template-areas:    '. pro-pitch pro-pitch .'
                             '. m-mid timeline .'
                             
-                            'card card card card';
+                            '. card card .';
     grid-template-columns: minmax(1rem, .7fr) 2fr 1fr minmax(1rem, .7fr);
 }
 
@@ -724,6 +708,7 @@ html:not([data-scroll='0']) .nav-button > span {
     border-radius: .2em;
     /* box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px; */
     box-shadow: var(--box-shadow-card-container);
+    background: var(--background-body);
 }
 
 .iframe-main iframe {
@@ -770,11 +755,16 @@ html:not([data-scroll='0']) .nav-button > span {
     grid-template-areas:    't y'
                             '. y';
     grid-template-columns: minmax(25ch, 100%) 4rem;
+    
+}
+
+.timeline-object b {
+    color: var(--color-1);
 }
 
 .timeline-object .text {
     grid-area: t;
-
+    margin-block-end: 1rem;
 }
 
 .timeline-object .text p {
@@ -879,8 +869,13 @@ html:not([data-scroll='0']) .nav-button > span {
 
 @media screen and (max-width: 1679px) {
     .process-pitch-item:last-child {
-        margin-block-start: 3rem;
-        grid-column: 1 / 4;
+        /* margin-block-start: 3rem; */
+        grid-column: 2;
+    }
+
+    .process-pitch-item:nth-of-type(3) {
+        /* margin-block-start: 3rem; */
+        grid-column: 1;
     }
 
     .process-pitch-wrapper {
@@ -913,21 +908,6 @@ html:not([data-scroll='0']) .nav-button > span {
     bottom: 2rem;
 }
 
-@media screen and (min-width: 992px) {
-    .process-pitch-item:hover {
-        scale: 1.05;
-        transition: var(--all-cb-two);
-    }
-
-    .process-pitch-btn:hover {
-        cursor: pointer;
-        /* background-color: var(--color-2); */
-        transition: var(--all-cb-two);
-        color: white;
-        box-shadow: inset 10ch 0 0 0 var(--color-2);
-    }
-}
-
 .process-pitch-btn {
     background-color: var(--background-process-wrapper);
     padding: .5em;
@@ -936,8 +916,23 @@ html:not([data-scroll='0']) .nav-button > span {
     border-radius: .2rem;
     color: hsl(0, 0%, 24%);
     font-weight: 600;
-    transition: var(--all-cb-two);
+    transition: var(--all-ft-ease);
     box-shadow: inset 0 0 0 0 var(--color-2);
+}
+
+@media screen and (min-width: 992px) {
+    /* .process-pitch-item:hover {
+        scale: 1.05;
+        transition: var(--all-cb-two);
+    } */
+
+    .process-pitch-btn:hover {
+        cursor: pointer;
+        /* background-color: var(--color-2); */
+        transition: var(--all-cb-one);
+        color: white;
+        box-shadow: inset 10ch 0 0 0 var(--color-2);
+    }
 }
 
 @media screen and (max-width: 991px) {
@@ -990,32 +985,40 @@ sc-excep {
     min-width: 30ch;
     margin-block: 2rem;
     padding-block: 5rem;
-    background-color: var(--background-card-container);
+    /* background-color: var(--background-card-container); */
     display: grid;
-    /* gap: 2em; */
-    grid-template-areas:    '. card-init card-img .';
-    grid-template-columns: minmax(1rem, .7fr) 2fr 1fr minmax(1rem, .7fr);
+    gap: 5rem;
+    grid-template-areas:'card-img'
+                        'card-init';
+    grid-template-columns: 1fr;
+    /*     grid-template-areas:    '. card-init card-img .';
+    grid-template-columns: minmax(1rem, .7fr) 2fr 1fr minmax(1rem, .7fr); */
     border-radius: .2em;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 0 0;
-    /* transition: box-shadow var(--five-ease-io); */
 }
 
 @media screen and (max-width: 991px) {
     .card-container {
-        grid-template-areas:    '. card-init .';
-        grid-template-columns: minmax(1rem, .7fr) 6fr minmax(1rem, .7fr);
-        grid-template-rows: 1fr;
+        grid-template-areas:    'card-init';
+        grid-template-columns: 1fr;
         place-items: center !important;
         padding-block: 2rem !important;
         min-width: auto !important;
+        gap: 0 !important;
     }
     
     .card-group, .card {
         display: none !important;
     }
+
+    .card-init {
+        box-shadow: none !important;
+    }
 }
 
 .card-init {
+    /* background: var(--background-card-container); */
+    border-radius: 2rem;
+    padding: 2rem;
     grid-area: card-init;
     display: grid;
 }
@@ -1066,6 +1069,9 @@ sc-excep {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: fit-content;
+    background: var(--color-1-2);
+    padding: .5rem;
 }
 
 .card {
@@ -1073,24 +1079,21 @@ sc-excep {
     --card-mod: translateY(-2rem);
     --aspect-ratio: 15em;
     position: absolute;
-    /* left: 0; 
-    right: 0; 
-    top: 0;
-    bottom: 0;
-    margin-block: auto;
-    margin-inline: auto;  */
     width: var(--aspect-ratio);
     height: calc((var(--aspect-ratio) / 16) * 9); 
     transition: var(--all-ease);
     box-shadow: var(--cards-boxshadow);
 }
 
+.card img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
 
 .card1 {
-    background: url('../prg-cards/abe_planner.jpg');
-    background-size: contain;
     transform: var(--card-transform) translateZ(6vw);
-    /* animation: card1-Breath 6s ease-in-out infinite; */
 }
 
 .card1:hover {
@@ -1099,11 +1102,9 @@ sc-excep {
 }
 
 .card2 {
-    background: url('../prg-cards/igems.jpg');
-    background-size: contain;
     transform: var(--card-transform) translateZ(2vw);
-    /* animation: card2-Breath 6s ease-in-out 1.4s infinite; */
 }
+
 
 .card2:hover {
     transform: var(--card-transform) translateZ(2vw) var(--card-mod);
@@ -1111,10 +1112,7 @@ sc-excep {
 }
 
 .card3 {
-    background: url('../prg-cards/pronest.jpg');
-    background-size: contain;
     transform: var(--card-transform) translateZ(-2vw);
-    /* animation: card3-Breath 6s ease-in-out 2.32s infinite; */
 }
 
 .card3:hover {
@@ -1123,10 +1121,7 @@ sc-excep {
 }
 
 .card4 {
-    background: url('../prg-cards/solidworks.jpg');
-    background-size: contain;
     transform: var(--card-transform) translateZ(-6vw);
-    /* animation: card4-Breath 6s ease-in-out 3.13s infinite; */
 }
 
 .card4:hover {
@@ -1146,7 +1141,8 @@ footer {
                             'copyright copyright copyright';
     grid-template-columns: minmax(1rem, .7fr) 3fr minmax(1rem, .7fr);
     grid-template-rows: 1fr;
-    margin-block: 2rem;
+    padding-block: 2rem;
+    background: var(--background-footer);
 }
 
 .footer-wrapper {
@@ -1240,7 +1236,6 @@ footer {
 .copyright xf5:last-of-type {
     font-weight: 600;
     color: var(--color-1);
-    margin-block-end: 1em;
 }
 /* ---- End of footer ---- */
 
@@ -1312,7 +1307,7 @@ footer {
     margin: 1rem;
 }
 
-.process-dom {
+.process-dom, .machine-dom {
     position: sticky;
     top: 7rem;
     margin-block-start: 2rem;
@@ -1324,17 +1319,18 @@ footer {
     background:white;
 }
 
-.process-dom li {
+.process-dom li, .machine-dom li {
     list-style: none;
     margin-block: .2rem;
     width: 100%;
 }
 
-.process-dom a {
+.process-dom a, .machine-dom a {
     text-decoration: none;
     color: var(--color-1);
     transition: var(--all-ease);
     font-weight: 500;
+    cursor: pointer;
 }
 
 .process-dom > ul > li > a::before {
@@ -1375,7 +1371,7 @@ footer {
 }
 /* ---- EXCEPTIONS ---- */
 
-.process-dom a:hover {
+.process-dom a:hover, .machine-dom a:hover {
     color: var(--color-2);
     transition: var(--all-ease);
 }
@@ -1442,13 +1438,34 @@ footer {
         left: 20vw;
         top: 60%;
     }
+
+    .seventh {
+        height: 30rem;
+        width: 30%;
+        right: 14vw;
+        top: 60%;
+    }
+
+    .eight {
+        height: 10rem;
+        width: 10%;
+        left: 12vw;
+        top: 80%;
+    }
+
+    .ninth {
+        height: 15rem;
+        width: 15%;
+        right: 24vw;
+        top: 100%;
+    }
 }
 
 .process-container p {
     line-height: 1.5em;
     word-spacing: .1em;
 }
-.process-container h1 {
+.process-container h1, .machine-intro h1 {
     color: var(--color-1);
     font-size: 2rem;
     margin-top: 0;
@@ -1501,7 +1518,7 @@ footer {
 
 .material-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
     grid-template-rows: repeat(auto-fit, minmax(10ch, 1fr));
     gap: 1rem;
 }
@@ -1565,7 +1582,6 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
 .gallery {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(12rem ,1fr));
-    /* grid-template-rows: repeat(auto-fill, minmax(134px, 1fr)); */
     gap: 1rem;
     
 }
@@ -1573,6 +1589,8 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
 .gallery > a > img {
     width: 100%;
     border-radius: .5rem;
+    box-shadow: var(--box-shadow-gallery-img);
+    
 }
 
 .gallery > img {
@@ -1580,6 +1598,7 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
     height: 100%;
     object-fit: cover;
     transition: var(--all-ease);
+    
 }
 
 /* ---- End of process' ---- */
@@ -1589,11 +1608,34 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
 .machine-wrapper {
     background: var(--background-main-section);
     display: grid;
-    gap: 4rem;
-    grid-template-areas:    '. mach-mid .';
-    grid-template-columns: minmax(1rem, .7fr) 4fr minmax(1rem, .7fr);
-    opacity: 0;
+    gap: 2rem;
+    grid-template-areas:    '. mach-content mach-heading .'
+                            '. mach-content mach-mid .';
+    grid-template-columns: minmax(1rem, .7fr) 1fr 3fr minmax(1rem, .7fr);
     margin-block: calc(2rem + 1px);
+    opacity: 0;
+}
+
+.machine-dom {
+    margin-block-start: 0;
+}
+
+.machine-intro {
+    grid-area: mach-heading;
+    display: grid;
+    place-items: center left;
+    width: 100%;
+}
+
+.machine-intro h1 {
+    padding: 0;
+    margin: 0;
+}
+
+.machine-side-wrapper {
+    grid-area: mach-content;
+    width: 100%;
+    height: auto;
 }
 
 .machine-container {
@@ -1613,7 +1655,7 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
     place-items: center;
     width: 100%;
     height: 100%;
-    padding: .5rem;
+    padding: .4rem;
 }
 
 .machine-txt-container {
@@ -1623,11 +1665,13 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
     width: 100%;
     height: 100%;
     padding: .5rem;
+    text-align: center;
 }
 
 .machine-txt-container p {
     margin: 0;
     padding-block: .5rem;
+    text-align: center;
 }
 
 .machine-container hr {
@@ -1667,10 +1711,53 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
     grid-template-columns: 2fr 4fr;
 }
 
+.machine-dom > ul > li {
+    list-style: none;
+}
+
+.machine-active {
+    border-left: 4px solid var(--color-2);
+}
+
+@media screen and (max-width: 1200px){
+    .machine-wrapper {
+        grid-template-areas:    '. mach-heading .'
+                                '. mach-content .'
+                                '. mach-mid .';                      
+        grid-template-columns: 1fr 20fr 1fr;
+        gap: 1rem;
+    }
+
+    .machine-active {
+        border-left: none !important;
+    }
+}
+
 @media screen and (max-width: 991px) {
     .machine-wrapper {
-        grid-template-areas:    '. mach-mid .';                      
+        grid-template-areas:    '. mach-heading .'
+                                '. mach-content .'
+                                '. mach-mid .';                      
         grid-template-columns: 1fr 20fr 1fr;
+        gap: 1rem;
+    }
+
+    .machine-side-wrapper {
+        margin: 0;
+    }
+
+    .machine-active {
+        border-left: none !important;
+    }
+
+    .machine-txt-container {
+        place-items: center left;
+        text-align: left;
+    }
+
+    .machine-txt-container p {
+        padding-block: .2rem;
+        text-align: left;
     }
 
     .machine-content:nth-of-type(odd) {
@@ -1688,13 +1775,11 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
     }
 }
 
+
+
 /* ---- End of Machines----*/
 
 /* ---- Start of Scrollmagic stuff ---- */
-.boxshadow {
-    box-shadow: var(--box-shadow-card-container);
-    transition: box-shadow var(--scrl-one-two);
-}
 
 .process-show {
     opacity: 1;
