--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 :root {
     /* Colors / BG */
+    --body-color: hsl(0, 0%, 25%);
     --background-body: hsl(0, 0%, 100%);
     --background-navbar: hsl(0, 0%, 100%);
     --background-main-section: white;
@@ -85,6 +86,7 @@ button::selection {
 body {
     font-family: "Inter", sans-serif;
     background-color: var(--background-body);
+    color: var(--body-color);
     font-size: var(--html-font-size);
     padding: 0;
     margin: 0;
@@ -134,18 +136,21 @@ ul {
     top: 0;
     height: 5rem;
     width: 100%;
+    gap: 2rem;
     display: grid;
     grid-template-areas: ".. nav-mid ..";
-    grid-template-columns: minmax(1rem, .7fr) 3fr minmax(1rem, .7fr);
+    grid-template-columns: minmax(1rem, .7fr) 4fr minmax(1rem, .7fr);
     background-color: rgba(0, 0, 0, 40%);
     transition: var(--all-ease);
 }
 
+/*
 @media screen and (max-width: 1200px) {
     .navbar {
         grid-template-columns: minmax(1rem, .4fr) 3fr minmax(1rem, .4fr);
     }
 }
+*/
 
 @media screen and (max-width: 991px) {
     .navbar {
@@ -243,7 +248,6 @@ ul {
 .navbar-svg {
     height: 3rem;
     width: auto;
-    padding-left: 1rem;
     filter: grayscale(1) invert(1) brightness(2);
     transition: var(--all-ease);
     animation: smoothIn .5s ease-in-out forwards;
@@ -268,7 +272,7 @@ ul {
 }
 
 .navbar-items a:hover {
-    color: var(--color-2) !important;
+    color: var(--color-1) !important;
     transition: var(--all-ft-ease);
 }
 
@@ -443,7 +447,7 @@ ul {
     
     .navbar {
         display: grid;
-        height: 3rem;
+        height: 4rem;
         grid-template-areas: "nav-mid";
         grid-template-columns: 1fr;
         
@@ -471,6 +475,7 @@ ul {
 
     .navbar-svg {
         height: 2rem;
+        padding-left: 1rem;
     }
 
     .nav-button {
@@ -1138,7 +1143,7 @@ footer {
     gap: 1rem;
     grid-template-areas:    '. footer-content .'
                             'copyright copyright copyright';
-    grid-template-columns: minmax(1rem, .7fr) 3fr minmax(1rem, .7fr);
+    grid-template-columns: minmax(1rem, .7fr) 4fr minmax(1rem, .7fr);
     grid-template-rows: 1fr;
     padding-block: 2rem;
     background: var(--background-footer);
@@ -1299,7 +1304,7 @@ footer {
     z-index: 1;
     background: var(--background-main-section);
     display: grid;
-    gap: 4rem;
+    gap: 2rem;
     grid-template-areas:    '. p-nav p-mid .'
                             '. p-nav p-mid .';
     grid-template-columns: minmax(1rem, .7fr) 1fr 3fr minmax(1rem, .7fr);
@@ -1829,8 +1834,9 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
     background: var(--background-main-section);
     display: grid;
     gap: 2rem;
-    grid-template-areas: '. m-mid timeline .';
-    grid-template-columns:  minmax(1rem, .7fr) 2.7fr 1fr minmax(1rem, .7fr);
+    grid-template-areas: '. m-mid . '
+                        '. timeline .';
+    grid-template-columns:  minmax(1rem, .7fr) 4fr minmax(1rem, .7fr);
 }
 
 .main-container {
@@ -1842,23 +1848,6 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
     word-spacing: .1em;
 }
 
-.iframe-main {
-    position: relative;
-    width: 100%;
-    padding-bottom: 56.25%; 
-    height: 0;
-    margin-block-start: 1rem;
-    border-radius: .2em;
-}
-
-.iframe-main iframe {
-    position: absolute;
-    top:0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: .7rem;
-}
 
 .main-container h1, .timeline-container h1 {
     color: var(--color-1);
@@ -1895,11 +1884,11 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
 }
 
 .timeline-object {
-    min-height: 5rem;
+    min-height: 3rem;
     display: grid;
-    grid-template-areas:    't y'
-                            '. y';
-    grid-template-columns: minmax(25ch, 100%) 4rem;
+    grid-template-areas:    'y t'
+                            'y .';
+    grid-template-columns: 4rem minmax(25ch, 100%);
     
 }
 
@@ -2059,3 +2048,105 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
 }
 /* ---- End of Scrollmagic stuff ---- */
 
+/* ---- Start of User definitions ---- */
+.outlined-p {
+    font-size: 1.3em;
+}
+/* ---- End of User definitions ---- */
+
+/* ---- Start of UIVerse imports ---- */
+/* From Uiverse.io by cssbuttons-io */ 
+.lm-button {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    outline: none;
+    border: 0;
+    vertical-align: middle;
+    text-decoration: none;
+    background: transparent;
+    padding: 0;
+    font-size: inherit;
+    font-family: inherit;
+   }
+   
+   .lm-button.learn-more {
+    width: 12rem;
+    height: auto;
+   }
+   
+   .lm-button.learn-more .circle {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    position: relative;
+    display: block;
+    margin: 0;
+    width: 3rem;
+    height: 3rem;
+    background: var(--color-1);
+    border-radius: 1.625rem;
+   }
+   
+   .lm-button.learn-more .circle .icon {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    background: #fff;
+   }
+   
+   .lm-button.learn-more .circle .icon.arrow {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    left: 0.625rem;
+    width: 1.125rem;
+    height: 0.125rem;
+    background: none;
+   }
+   
+   .lm-button.learn-more .circle .icon.arrow::before {
+    position: absolute;
+    content: "";
+    top: -0.29rem;
+    right: 0.0625rem;
+    width: 0.625rem;
+    height: 0.625rem;
+    border-top: 0.125rem solid #fff;
+    border-right: 0.125rem solid #fff;
+    transform: rotate(45deg);
+   }
+   
+   .lm-button.learn-more .button-text a {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 0.75rem 0;
+    margin: 0 0 0 1.85rem;
+    color: #282936;
+    font-weight: 700;
+    line-height: 1.6;
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration: none;
+   }
+   
+   .lm-button:hover .circle {
+    width: 100%;
+   }
+   
+   .lm-button:hover .circle .icon.arrow {
+    background: #fff;
+    transform: translate(1rem, 0);
+   }
+   
+   .lm-button:hover .button-text a {
+    color: #fff;
+   }
+
+   .lm-button:hover .circle {
+    background: var(--color-2);
+   }
+
+/* ---- End of UIVerse imports ---- */
